--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,13 +8,44 @@ variables:
   - name: AZURE_ML_WORKSPACE
     value: 'azure-ml-test'
   - name: AZURE_ML_RESOURCE_GROUP
-    value: 'east-us-rg'
+    value: 'east-us-rg-test'
   - name: MODEL_NAME
     value: 'llama-3.2-1b'
   - name: ENDPOINT_NAME
     value: 'llama-endpoint'
+  - name: MODEL_PATH
+    value: '$(Build.SourcesDirectory)/models'
 
 steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '3.9'
+    addToPath: true
+
+- script: |
+    python -m pip install --upgrade pip
+    pip install torch transformers huggingface_hub azure-ai-ml
+  displayName: 'Install dependencies'
+
+- script: |
+    mkdir -p $(MODEL_PATH)
+    python -c "
+    from huggingface_hub import snapshot_download
+    from transformers import AutoTokenizer, AutoModelForCausalLM
+    
+    # Download model and tokenizer
+    model_path = '$(MODEL_PATH)'
+    model_name = 'meta-llama/Llama-3.2-1B'
+    
+    # Download model files
+    snapshot_download(
+        repo_id=model_name,
+        local_dir=model_path,
+        token='$(HUGGINGFACE_TOKEN)'  # This should be set as a pipeline variable
+    )
+    "
+  displayName: 'Download model from Hugging Face'
+
 - task: AzureCLI@2
   inputs:
     azureSubscription: 'azure-subscription'
@@ -27,6 +58,12 @@ steps:
       # Set up Azure ML workspace
       az ml workspace show -n $(AZURE_ML_WORKSPACE) -g $(AZURE_ML_RESOURCE_GROUP) || \
       az ml workspace create -n $(AZURE_ML_WORKSPACE) -g $(AZURE_ML_RESOURCE_GROUP)
+
+      # Register the model
+      az ml model create \
+        --name $(MODEL_NAME) \
+        --path $(MODEL_PATH) \
+        --type custom_model
 
 - task: AzureCLI@2
   inputs:
