--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
   - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'debian-latest'
   name: 'Default'
 
 variables:
@@ -20,23 +20,25 @@ variables:
 steps:
 - script: |
     sudo apt-get update
-    sudo apt-get install -y software-properties-common
-    sudo add-apt-repository -y ppa:deadsnakes/ppa
-    sudo apt-get update
-    sudo apt-get install -y python3.11 python3.11-dev python3.11-venv
-    sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1
-    sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1
-    python3 --version
+    sudo apt-get install -y build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev wget
+    wget https://www.python.org/ftp/python/3.11.0/Python-3.11.0.tgz
+    tar -xf Python-3.11.0.tgz
+    cd Python-3.11.0
+    ./configure --enable-optimizations
+    make -j $(nproc)
+    sudo make altinstall
+    cd ..
+    python3.11 --version
   displayName: 'Install Python 3.11'
 
 - script: |
-    python3 -m pip install --upgrade pip
-    python3 -m pip install torch transformers huggingface_hub azure-ai-ml
+    python3.11 -m pip install --upgrade pip
+    python3.11 -m pip install torch transformers huggingface_hub azure-ai-ml
   displayName: 'Install dependencies'
 
 - script: |
     mkdir -p $(MODEL_PATH)
-    python3 -c "
+    python3.11 -c "
     from huggingface_hub import snapshot_download
     from transformers import AutoTokenizer, AutoModelForCausalLM
     
