--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,14 +20,12 @@ variables:
 steps:
 - script: |
     sudo apt-get update
-    sudo apt-get install -y build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev wget
-    wget https://www.python.org/ftp/python/3.11.0/Python-3.11.0.tgz
-    tar -xf Python-3.11.0.tgz
-    cd Python-3.11.0
-    ./configure --enable-optimizations
-    make -j $(nproc)
-    sudo make altinstall
-    cd ..
+    sudo apt-get install -y software-properties-common
+    sudo add-apt-repository -y ppa:deadsnakes/ppa
+    sudo apt-get update
+    sudo apt-get install -y python3.11 python3.11-dev python3.11-venv
+    sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1
+    sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1
     python3.11 --version
   displayName: 'Install Python 3.11'
 
