--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,8 @@ variables:
     value: 'llama-endpoint'
   - name: MODEL_PATH
     value: '$(Build.SourcesDirectory)/models'
+  - name: VENV_PATH
+    value: '$(Build.SourcesDirectory)/venv'
 
 steps:
 - script: |
@@ -23,20 +25,32 @@ steps:
     sudo apt-get install -y software-properties-common
     sudo add-apt-repository -y ppa:deadsnakes/ppa
     sudo apt-get update
-    sudo apt-get install -y python3.11 python3.11-dev python3.11-venv
+    sudo apt-get install -y python3.11 python3.11-dev python3.11-venv python3-pip python3-full
     sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1
     sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1
     python3.11 --version
   displayName: 'Install Python 3.11'
 
 - script: |
-    python3.11 -m pip install --upgrade pip
-    python3.11 -m pip install torch transformers huggingface_hub azure-ai-ml
-  displayName: 'Install dependencies'
+    # Create and activate virtual environment
+    python3.11 -m venv $(VENV_PATH)
+    source $(VENV_PATH)/bin/activate
+    
+    # Upgrade pip and install dependencies
+    python -m pip install --upgrade pip
+    pip install torch transformers huggingface_hub azure-ai-ml
+    
+    # Verify installations
+    python --version
+    pip --version
+  displayName: 'Setup virtual environment and install dependencies'
 
 - script: |
+    # Activate virtual environment
+    source $(VENV_PATH)/bin/activate
+    
     mkdir -p $(MODEL_PATH)
-    python3.11 -c "
+    python -c "
     from huggingface_hub import snapshot_download
     from transformers import AutoTokenizer, AutoModelForCausalLM
     
