--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,16 +103,49 @@ steps:
       # Create model deployment configuration
       cat > deployment_config.yml << EOF
       name: llama-3-2-1b-deployment
-      model: azureml:$(MODEL_NAME)@latest
       endpoint_name: $(ENDPOINT_NAME)
-      instance_type: Standard_NC6s_v3
-      instance_count: 1
-      app_insights_enabled: true
+      model: azureml:$(MODEL_NAME)@latest
+      environment: azureml:AzureML-sklearn-1.0-ubuntu20.04-py38-cpu@latest
+      code_configuration:
+        code: .
+        scoring_script: score.py
+      resources:
+        instance_type: Standard_NC6s_v3
+        instance_count: 1
       request_settings:
         max_concurrent_requests_per_instance: 1
         request_timeout_ms: 90000
       traffic:
         blue: 100
+      EOF
+
+      # Create scoring script
+      cat > score.py << EOF
+      import json
+      import logging
+      import os
+      import sys
+      from transformers import AutoModelForCausalLM, AutoTokenizer
+
+      def init():
+          global model, tokenizer
+          model_path = os.path.join(os.getenv('AZUREML_MODEL_DIR'), 'model')
+          model = AutoModelForCausalLM.from_pretrained(model_path)
+          tokenizer = AutoTokenizer.from_pretrained(model_path)
+
+      def run(raw_data):
+          try:
+              data = json.loads(raw_data)
+              input_text = data['input_data']['input_string']
+              
+              inputs = tokenizer(input_text, return_tensors="pt")
+              outputs = model.generate(**inputs, max_length=100)
+              response = tokenizer.decode(outputs[0], skip_special_tokens=True)
+              
+              return {"response": response}
+          except Exception as e:
+              logging.error(f"Error: {str(e)}")
+              return {"error": str(e)}
       EOF
 
       # Deploy the model
