--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,63 +96,26 @@ steps:
         --resource-group $(AZURE_ML_RESOURCE_GROUP)
 
 - task: AzureCLI@2
+  displayName: 'Create Online Endpoint'
+  inputs:
+    azureSubscription: 'azure-subscription'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      # Create the endpoint
+      az ml online-endpoint create -f endpoint.yml \
+        --workspace-name $(AZURE_ML_WORKSPACE) \
+        --resource-group $(AZURE_ML_RESOURCE_GROUP)
+
+- task: AzureCLI@2
   displayName: 'Deploy Model to Online Endpoint'
   inputs:
     azureSubscription: 'azure-subscription'
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      # Create model deployment configuration
-      cat > deployment_config.yml << EOF
-      name: llama-3-2-1b-deployment
-      type: online
-      target: azureml:$(ENDPOINT_NAME)@latest
-      model: azureml:$(MODEL_NAME)@latest
-      environment: azureml:AzureML-sklearn-1.0-ubuntu20.04-py38-cpu@latest
-      code_configuration:
-        code: .
-        scoring_script: score.py
-      instance_type: Standard_NC6s_v3
-      instance_count: 1
-      app_insights_enabled: true
-      request_settings:
-        max_concurrent_requests_per_instance: 1
-        request_timeout_ms: 90000
-      traffic:
-        blue: 100
-      EOF
-
-      # Create scoring script
-      cat > score.py << EOF
-      import json
-      import logging
-      import os
-      import sys
-      from transformers import AutoModelForCausalLM, AutoTokenizer
-
-      def init():
-          global model, tokenizer
-          model_path = os.path.join(os.getenv('AZUREML_MODEL_DIR'), 'model')
-          model = AutoModelForCausalLM.from_pretrained(model_path)
-          tokenizer = AutoTokenizer.from_pretrained(model_path)
-
-      def run(raw_data):
-          try:
-              data = json.loads(raw_data)
-              input_text = data['input_data']['input_string']
-              
-              inputs = tokenizer(input_text, return_tensors="pt")
-              outputs = model.generate(**inputs, max_length=100)
-              response = tokenizer.decode(outputs[0], skip_special_tokens=True)
-              
-              return {"response": response}
-          except Exception as e:
-              logging.error(f"Error: {str(e)}")
-              return {"error": str(e)}
-      EOF
-
-      # Deploy the model
-      az ml online-endpoint create -f deployment_config.yml \
+      # Deploy the model using the configuration file
+      az ml online-deployment create -f deployment_config.yml \
         --workspace-name $(AZURE_ML_WORKSPACE) \
         --resource-group $(AZURE_ML_RESOURCE_GROUP)
 
