--- a/deployment_config.yml
+++ b/deployment_config.yml
@@ -1,15 +1,13 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineDeployment.schema.json
 name: llama-3-2-1b-deployment
 endpoint_name: $(ENDPOINT_NAME)
-model:
-  path: $(MODEL_PATH)
-  type: custom_model
+model: azureml:$(MODEL_NAME)@latest
 code_configuration:
   code: .
   scoring_script: score.py
-environment: 
-  conda_file: environment/conda.yaml
-  image: mcr.microsoft.com/azureml/cuda-11.8-cudnn8-ubuntu22.04:latest
+environment: azureml:AzureML-sklearn-1.0-ubuntu20.04-py38-cpu@latest
 instance_type: Standard_NC6s_v3
 instance_count: 1
-app_insights_enabled: true 
+app_insights_enabled: false
+scale_settings:
+  type: default 
