--- a/deployment_config.yml
+++ b/deployment_config.yml
@@ -6,7 +6,7 @@ code_configuration:
   code: .
   scoring_script: score.py
 environment: azureml:AzureML-sklearn-1.0-ubuntu20.04-py38-cpu@latest
-instance_type: Standard_NC6s_v3
+instance_type: Standard_NC4as_T4_v3
 instance_count: 1
 app_insights_enabled: false
 scale_settings:
