--- a/deployment_config.yml
+++ b/deployment_config.yml
@@ -5,7 +5,7 @@ model: azureml:llama-3-2-1b@latest
 code_configuration:
   code: .
   scoring_script: score.py
-environment: azureml:AzureML-sklearn-1.0-ubuntu20.04-py38-cpu@latest
+environment: azureml:AzureML-pytorch-1.13-ubuntu20.04-py38-cuda11-gpu@latest
 instance_type: Standard_E4s_v3
 instance_count: 1
 app_insights_enabled: false
