--- a/deployment_config.yml
+++ b/deployment_config.yml
@@ -3,7 +3,7 @@ name: llama-3-2-1b-deployment
 endpoint_name: llama-endpoint-v1
 model: azureml:llama-3-2-1b@latest
 code_configuration:
-  code: .
+  code: ./deployment_files
   scoring_script: score.py
 environment: azureml:AzureML-pytorch-1.13-ubuntu20.04-py38-cuda11-gpu@latest
 instance_type: Standard_E4s_v3
