--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,8 @@ variables:
     value: '$(Build.SourcesDirectory)/venv'
   - name: AZURE_SERVICE_CONNECTION
     value: 'connection1'
+  - name: MODEL_VERSION
+    value: '$(Build.SourcesDirectory)/models/version'
 
 steps:
 - script: |
@@ -123,8 +125,7 @@ steps:
         --path $(MODEL_PATH) \
         --type custom_model \
         --workspace-name $(AZURE_ML_WORKSPACE) \
-        --resource-group $(AZURE_ML_RESOURCE_GROUP) \
-        --local
+        --resource-group $(AZURE_ML_RESOURCE_GROUP)
 
 - task: AzureCLI@2
   displayName: 'Create or Update Online Endpoint'
@@ -160,23 +161,13 @@ steps:
       az ml online-endpoint show --name $(ENDPOINT_NAME) --workspace-name $(AZURE_ML_WORKSPACE) --resource-group $(AZURE_ML_RESOURCE_GROUP) || \
       az ml online-endpoint create --name $(ENDPOINT_NAME) --workspace-name $(AZURE_ML_WORKSPACE) --resource-group $(AZURE_ML_RESOURCE_GROUP)
       
-      # Deploy the model using the configuration file with optimized settings
+      # Deploy the model using the configuration file
       echo "Deploying model..."
       az ml online-deployment create \
         -f deployment_config.yml \
         --workspace-name $(AZURE_ML_WORKSPACE) \
         --resource-group $(AZURE_ML_RESOURCE_GROUP) \
-        --local \
         --all-traffic
-
-      # Wait for deployment to complete
-      echo "Waiting for deployment to complete..."
-      az ml online-deployment show \
-        --name llama-3-2-1b-deployment \
-        --endpoint-name $(ENDPOINT_NAME) \
-        --workspace-name $(AZURE_ML_WORKSPACE) \
-        --resource-group $(AZURE_ML_RESOURCE_GROUP) \
-        --query "provisioning_state"
 
 - task: AzureCLI@2
   displayName: 'Get Endpoint Details'
