--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,14 +14,10 @@ variables:
     value: 'llama-3-2-1b'
   - name: ENDPOINT_NAME
     value: 'llama-endpoint-v1'
-  - name: MODEL_PATH
-    value: '$(Build.SourcesDirectory)/models'
   - name: VENV_PATH
     value: '$(Build.SourcesDirectory)/venv'
   - name: AZURE_SERVICE_CONNECTION
     value: 'connection1'
-  - name: MODEL_VERSION
-    value: '$(Build.SourcesDirectory)/models/version'
 
 steps:
 - script: |
@@ -42,7 +38,7 @@ steps:
     
     # Upgrade pip and install dependencies
     python -m pip install --upgrade pip
-    pip install torch transformers huggingface_hub azure-ai-ml
+    pip install azure-ai-ml
     
     # Verify installations
     python --version
@@ -50,60 +46,10 @@ steps:
   displayName: 'Setup virtual environment and install dependencies'
 
 - script: |
-    # Activate virtual environment
-    source $(VENV_PATH)/bin/activate
-    
-    mkdir -p $(MODEL_PATH)
-    python -c "
-    from huggingface_hub import snapshot_download
-    from transformers import AutoTokenizer, AutoModelForCausalLM
-    
-    # Download model and tokenizer
-    model_path = '$(MODEL_PATH)'
-    model_name = 'meta-llama/Llama-3.2-1B'
-    
-    # Download model files
-    snapshot_download(
-        repo_id=model_name,
-        local_dir=model_path,
-        token='$(HUGGINGFACE_TOKEN)'  # This should be set as a pipeline variable
-    )
-    "
-  displayName: 'Download model from Hugging Face'
-
-- script: |
     # Install Azure CLI
     curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
     az --version
   displayName: 'Install Azure CLI'
-
-- task: AzureCLI@2
-  displayName: 'Azure Login'
-  inputs:
-    azureSubscription: '$(AZURE_SERVICE_CONNECTION)'
-    scriptType: 'bash'
-    scriptLocation: 'inlineScript'
-    inlineScript: |
-      echo "Checking Azure authentication status..."
-      az account show
-      echo "Listing available subscriptions..."
-      az account list --output table
-      
-      # Get the subscription ID from the service connection
-      SUBSCRIPTION_ID=$(az account show --query id -o tsv)
-      echo "Current subscription ID: $SUBSCRIPTION_ID"
-      
-      # Try to explicitly set the subscription
-      echo "Setting subscription explicitly..."
-      az account set --subscription $SUBSCRIPTION_ID
-      
-      # Verify the subscription is set
-      echo "Verifying subscription..."
-      az account show --query "{subscriptionId:id, subscriptionName:name, tenantId:tenantId}" -o table
-      
-      echo "Checking service principal status..."
-      az ad sp list --display-name "azure-subscription" --query "[].{displayName:displayName, appId:appId, accountEnabled:accountEnabled}" --output table
-      echo "Successfully authenticated with Azure"
 
 - task: AzureCLI@2
   displayName: 'Setup Azure ML Workspace and Register Model'
@@ -119,10 +65,10 @@ steps:
       az ml workspace show -n $(AZURE_ML_WORKSPACE) -g $(AZURE_ML_RESOURCE_GROUP) || \
       az ml workspace create -n $(AZURE_ML_WORKSPACE) -g $(AZURE_ML_RESOURCE_GROUP)
 
-      # Register the model
+      # Register the model from catalog
       az ml model create \
         --name $(MODEL_NAME) \
-        --path $(MODEL_PATH) \
+        --path azureml://registries/azureml-meta/models/Llama-3.2-1B/versions/3 \
         --type custom_model \
         --workspace-name $(AZURE_ML_WORKSPACE) \
         --resource-group $(AZURE_ML_RESOURCE_GROUP)
@@ -156,11 +102,6 @@ steps:
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      # First, ensure the endpoint exists
-      echo "Ensuring endpoint exists..."
-      az ml online-endpoint show --name $(ENDPOINT_NAME) --workspace-name $(AZURE_ML_WORKSPACE) --resource-group $(AZURE_ML_RESOURCE_GROUP) || \
-      az ml online-endpoint create --name $(ENDPOINT_NAME) --workspace-name $(AZURE_ML_WORKSPACE) --resource-group $(AZURE_ML_RESOURCE_GROUP)
-      
       # Deploy the model using the configuration file
       echo "Deploying model..."
       az ml online-deployment create \
